--- a/quoteCalculator/templates/quoteCalculator/result.html
+++ b/quoteCalculator/templates/quoteCalculator/result.html
@@ -24,8 +24,8 @@
     </div>
 
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Get a Quote</h1>
-      <p class="lead">Simply enter your information and we will calucate your rate!</p>
+      <h1 class="display-4">Your Rate</h1>
+      <p class="lead">This is the rate of your loan based on your information!</p>
     </div>
 
     <div class="container">
