--- a/quoteCalculator/templates/quoteCalculator/result.html
+++ b/quoteCalculator/templates/quoteCalculator/result.html
@@ -39,7 +39,7 @@
             <ul class="list-unstyled mt-3 mb-4">
             </ul>
             <a href="{% url 'calculateQuote' %}" class="btn btn-lg btn-block btn-primary">
-            	<span style="color:white">Get started</span>
+            	<span style="color:white">Click here to calculate another quote</span>
             </a>
           </div>
         </div>
